--- a/package.json
+++ b/package.json
@@ -22,6 +22,14 @@
   "dependencies": {
     "concurrently": "^4.0.1",
     "express": "^4.16.3",
-    "parcel": "^1.9.7"
+    "parcel": "^1.9.7",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.10.5",
+    "@babel/preset-env": "^7.10.4",
+    "@babel/preset-react": "^7.10.4",
+    "parcel-bundler": "^1.12.4"
   }
 }
