--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "express": "^4.16.3",
     "parcel": "^1.9.7",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "react-router-dom": "^5.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.10.5",
